Fix elements sticking out of the container, when there is not enough space (#236)
* Fix elements sticking out of their containers

* ignore build files in linting tests

* linter fix

* Add storyboook deployment separate for each branch (#237)

* deploy storybook to folders on s3 with branch names

* add URL at the end of logs

* Add dev storybook link to the Readme file

--- a/src/components/ui/index.css
+++ b/src/components/ui/index.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  word-break: break-word;
 }
 
 .fhir-ui__Title {
@@ -39,6 +40,7 @@
   border-radius: 3px;
   background-color: #f8f9fa;
   color: #000;
+  overflow: auto;
 }
 
 .fhir-ui__Value {
@@ -87,6 +89,10 @@
 
 .fhir-ui__Table tbody .fhir-ui__TableRow:nth-of-type(odd) {
   background-color: rgba(0, 0, 0, 0.05);
+}
+
+.fhir-ui__ValueSection {
+  overflow: auto;
 }
 
 .fhir-ui__ValueSection-label {
